--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse " id="navbarSupportedContent">
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
                     <ul class="navbar-nav  mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link " href="#">Home</a>
+                            <a class="nav-link " href="#card">Card</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Link</a>
@@ -47,83 +47,99 @@
         </nav>
 
         <!-- Card -->
-        <div class="container mt-5 mb-3">
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="card p-3 mb-2">
-                        <div class="d-flex justify-content-between">
-                            <div class="d-flex flex-row align-items-center">
-                                <div class="icon avatar-wrapper"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSJehHfn82bCkYUmu6KtNpuNSgPqOPsOJysgyHXKCj8DbpAN8TrClgGWkKuTLXqI5HaCLg&usqp=CAU" alt=""> 
-                                <div class="verified-avatar-icon">✓</div>
+        <section id="card">
+            <div class="container mt-5 mb-3">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="card p-3 mb-2">
+                            <div class="d-flex justify-content-between">
+                                <div class="d-flex flex-row align-items-center">
+                                    <div class="icon avatar-wrapper"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSJehHfn82bCkYUmu6KtNpuNSgPqOPsOJysgyHXKCj8DbpAN8TrClgGWkKuTLXqI5HaCLg&usqp=CAU" alt=""> 
+                                    <div class="verified-avatar-icon">✓</div>
+                                    </div>
+                                    <div class="ms-2 c-details">
+                                        <h6 class="mb-0 ms-3">Charlotte Rosalie</h6> <span class="ms-3">EDU-IND-66444081</span>
+                                    </div>
                                 </div>
-                                <div class="ms-2 c-details">
-                                    <h6 class="mb-0 ms-3">Charlotte Rosalie</h6> <span class="ms-3">EDU-IND-66444081</span>
-                                </div>
+                                <div class="badge"> <button><i class="fa-solid fa-pencil"></i></button> </div>
                             </div>
-                            <div class="badge"> <button><i class="fa-solid fa-pencil"></i></button> </div>
-                        </div>
-                        <hr>
-                        <div class="">
-                            <ul class="fa-ul">
-                                <li class="my-2"><span class="fa-li"><i class="fa-solid fa-phone"></i></span>+91 75108 27929</li>
-                                <li class="my-2"><span class="fa-li"><i class="fa-solid fa-envelope-open"></i></span>myemail@rihannasinger.com</li>
-                                <li class="my-2"><span class="fa-li"><i class="fa-solid fa-graduation-cap"></i></span>MSc Business with International  Management</li>
-                            </ul>   
-                        </div>
-                        <div class="d-flex justify-content-between mt-3">
-                            <div class="badge-bottom d-flex flex-row align-items-center">
-                                <button type="button">Add Your Rest Documents</button>
+                            <hr>
+                            <div class="">
+                                <ul class="fa-ul">
+                                    <li class="my-2"><span class="fa-li"><i class="fa-solid fa-phone"></i></span>+91 75108 27929</li>
+                                    <li class="my-2"><span class="fa-li"><i class="fa-solid fa-envelope-open"></i></span>myemail@rihannasinger.com</li>
+                                    <li class="my-2"><span class="fa-li"><i class="fa-solid fa-graduation-cap"></i></span>MSc Business with International  Management</li>
+                                </ul>   
                             </div>
-                            <div class="badge3"> <button><i class="fa-solid fa-pencil"></i></button> </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card p-3 mb-2">
-                        <div class="d-flex justify-content-between">
-                            <div class="d-flex flex-row align-items-center">
-                                <div class="icon"> <i class="bx bxl-dribbble"></i> </div>
-                                <div class="ms-2 c-details">
-                                    <h6 class="mb-0">Dribbble</h6> <span>4 days ago</span>
+                            <div class="d-flex justify-content-between mt-3">
+                                <div class="badge-bottom d-flex flex-row align-items-center">
+                                    <button type="button">Add Your Rest Documents</button>
                                 </div>
-                            </div>
-                            <div class="badge"> <span>Product</span> </div>
-                        </div>
-                        <div class="mt-5">
-                            <h3 class="heading">Junior Product<br>Designer-Singapore</h3>
-                            <div class="mt-5">
-                                <div class="progress">
-                                    <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                                <div class="mt-3"> <span class="text1">42 Applied <span class="text2">of 70 capacity</span></span> </div>
+                                <div class="badge3"> <button><img src="img/logo.png" alt=""></button> </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card p-3 mb-2">
-                        <div class="d-flex justify-content-between">
-                            <div class="d-flex flex-row align-items-center">
-                                <div class="icon"> <i class="bx bxl-reddit"></i> </div>
-                                <div class="ms-2 c-details">
-                                    <h6 class="mb-0">Reddit</h6> <span>2 days ago</span>
+                    <div class="col-md-4">
+                        <div class="card p-3 mb-2">
+                            <div class="d-flex justify-content-between">
+                                <div class="d-flex flex-row align-items-center">
+                                    <div class="icon avatar-wrapper"><img src="https://as2.ftcdn.net/v2/jpg/04/10/43/77/1000_F_410437733_hdq4Q3QOH9uwh0mcqAhRFzOKfrCR24Ta.jpg" alt=""> 
+                                    </div>
+                                    <div class="ms-2 c-details">
+                                        <h6 class="mb-0 ms-3">Rosalie Due</h6> <span class="ms-3">EDU-IND-66444083</span>
+                                    </div>
+                                </div>
+                                <div class="badge"> <span>New</span> </div>
+                            </div>
+                            <hr>
+                            <div class="">
+                                <ul class="fa-ul">
+                                    <li class="my-2"><span class="fa-li"><i class="fa-solid fa-phone"></i></span>+91 75108 27929</li>
+                                    <li class="my-2"><span class="fa-li"><i class="fa-solid fa-envelope-open"></i></span>haris.karat@googlemail.com</li>
+                                    <li class="my-2"><span class="fa-li"><i class="fa-solid fa-graduation-cap"></i></span>Master of Business Administration in Global Business</li>
+                                </ul>   
+                            </div>
+                            <div class="d-flex justify-content-between ">
+                                <div class="badge-bottom d-flex flex-row align-items-center">
+                                    <span>Apptied</span>
                                 </div>
                             </div>
-                            <div class="badge"> <span>Design</span> </div>
                         </div>
-                        <div class="mt-5">
-                            <h3 class="heading">Software Architect <br>Java - USA</h3>
-                            <div class="mt-5">
-                                <div class="progress">
-                                    <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card p-3 mb-2">
+                            <div class="d-flex justify-content-between">
+                                <div class="d-flex flex-row align-items-center">
+                                    <div class="icon avatar-wrapper"><img src="https://as2.ftcdn.net/v2/jpg/04/10/43/77/1000_F_410437733_hdq4Q3QOH9uwh0mcqAhRFzOKfrCR24Ta.jpg" alt=""> 
+                                    </div>
+                                    <div class="ms-2 c-details">
+                                        <h6 class="mb-0 ms-3">Thomas Paul</h6> <span class="ms-3">EDU-IND-66444081</span>
+                                    </div>
                                 </div>
-                                <div class="mt-3"> <span class="text1">52 Applied <span class="text2">of 100 capacity</span></span> </div>
+                                <div class="badge"> <span>New</span> </div>
+                            </div>
+                            <hr>
+                            <div class="">
+                                <ul class="fa-ul">
+                                    <li class="my-2"><span class="fa-li"><i class="fa-solid fa-phone"></i></span>+91 75108 27929</li>
+                                    <li class="my-2"><span class="fa-li"><i class="fa-solid fa-envelope-open"></i></span>myemail@miamatrina.com</li>
+                                    <li class="my-2"><span class="fa-li"><i class="fa-solid fa-graduation-cap"></i></span>Master of Business Administration MBA</li>
+                                </ul>   
+                            </div>
+                            <div class="d-flex justify-content-between mt-3">
+                                <div class="badge-bottom d-flex flex-row align-items-center">
+                                    <span>Verified</span>
+                                </div>
+                                <div class="badge3"> <button><img src="img/logo.png" alt=""></button> </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
+        <section>
+            
+        </section>
 </body>
 <!-- Js -->
 <script src="script.js"></script>
