--- a/index.html
+++ b/index.html
@@ -137,8 +137,20 @@
                 </div>
             </div>
         </section>
-        <section>
-            
+
+
+
+
+
+        <section id="form" class="mt-5">
+            <div>
+                
+            </div>
+        </section>
+
+
+        <section id="post">
+
         </section>
 </body>
 <!-- Js -->
