--- a/index.html
+++ b/index.html
@@ -41,7 +41,13 @@
                         <a class="nav-link " href="#card">Card</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link" href="#form">Form</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#post">Post & Comments</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#notification">Notification</a>
                     </li>
                 </ul>
             </div>
