--- a/index.html
+++ b/index.html
@@ -169,10 +169,103 @@
 
 
 
-    <section id="form" class="mt-5">
+    <section id="form" class="mt-5 mb-3">
         <div>
-            <div class="p-2">
+            <div class="container">
+                <div class="form-fram">
+                    <div>
 
+                    </div>
+                    <div class="mx-3 mb-3">
+                        <h1 style="font-size: 26px;">Additional Information</h1>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="mb-3">
+                                    <label>Admission <span style="color: red;">*</span></label>
+                                    <div class="input-group">
+                                        <input type="text" class="form-control"
+                                            aria-label="Text input with segmented dropdown button"
+                                            placeholder="Select admission">
+                                        <div class="input-group-append">
+                                            <button type="button"
+                                                class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split"
+                                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                            </button>
+                                            <div class="dropdown-menu">
+                                                <a class="dropdown-item" href="#">Action</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="">Course Affiliation</label>
+                                    <div class="input-group mb-3">
+                                        <input type="text" class="form-control" placeholder="Select course affiliation"
+                                            aria-label="Recipient's username" aria-describedby="basic-addon2" >
+                                        <div class="input-group-append forms-btn">
+                                            <button class="btn btn-outline" type="button"><i class="fa-solid fa-plus"></i></button>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="">Documents Required <span style="color: red;">*</span></label>
+                                    <div class="input-group mb-3">
+                                        <input type="text" class="form-control" placeholder="Select documents"
+                                            aria-label="Recipient's username" aria-describedby="basic-addon2" >
+                                        <div class="input-group-append forms-btn">
+                                            <button class="btn btn-outline" type="button"><i class="fa-solid fa-plus"></i></button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="mb-3">
+                                    <label>Service <span style="color: red;">*</span></label>
+                                    <div class="input-group">
+                                        <input type="text" class="form-control"
+                                            aria-label="Text input with segmented dropdown button"
+                                            placeholder="Select service ">
+                                        <div class="input-group-append">
+                                            <button type="button"
+                                                class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split"
+                                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                            </button>
+                                            <div class="dropdown-menu">
+                                                <a class="dropdown-item" href="#">Action</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="">Entrance Required</label>
+                                    <div class="input-group mb-3">
+                                        <input type="text" class="form-control" placeholder="Select entrance"
+                                            aria-label="Recipient's username" aria-describedby="basic-addon2" >
+                                        <div class="input-group-append forms-btn">
+                                            <button class="btn btn-outline" type="button"><i class="fa-solid fa-plus"></i></button>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="">Specialization <span style="color: red;">*</span></label>
+                                    <div class="input-group mb-3">
+                                        <input type="text" class="form-control" placeholder="Select specialization"
+                                            aria-label="Recipient's username" aria-describedby="basic-addon2" >
+                                        <div class="input-group-append forms-btn">
+                                            <button class="btn btn-outline" type="button"><i class="fa-solid fa-plus"></i></button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <body>
+                        <hr class="dashed-line">     
+                    </body>
+                    <div>
+                        
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -257,7 +350,8 @@
                                         <div class="box1">
                                             <div class="ms-2  d-flex justify-content-between">
                                                 <div class="d-flex flex-row ">
-                                                    <p style="font-size: 14px;"><b>Greenwich IJniversity</b> • 34 min ago</p>
+                                                    <p style="font-size: 14px;"><b>Greenwich IJniversity</b> • 34 min
+                                                        ago</p>
                                                 </div>
                                                 <div class="badgex mx-2"> <span type="button">...</span> </div>
                                             </div>
@@ -268,7 +362,9 @@
                                     </div>
                                 </div>
                                 <div class="d-flex flex-row mt-3">
-                                    <div class="icon avatar-wrapper"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQlEp5OzlXk9pDxca3rFxy6arRnpTFXnE24Iw&usqp=CAU" alt="">
+                                    <div class="icon avatar-wrapper"><img
+                                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQlEp5OzlXk9pDxca3rFxy6arRnpTFXnE24Iw&usqp=CAU"
+                                            alt="">
                                     </div>
                                     <div>
                                         <div class="box1">
@@ -291,7 +387,8 @@
                                         <div class="box1">
                                             <div class="ms-2  d-flex justify-content-between">
                                                 <div class="d-flex flex-row ">
-                                                    <p style="font-size: 14px;"><b>Greenwich IJniversity</b> • 4 days ago</p>
+                                                    <p style="font-size: 14px;"><b>Greenwich IJniversity</b> • 4 days
+                                                        ago</p>
                                                 </div>
                                                 <div class="badgex mx-2"> <span type="button">...</span> </div>
                                             </div>
@@ -308,7 +405,7 @@
                                         <div class="box2">
                                             <div class="ms-2  d-flex justify-content-between">
                                                 <textarea class="form-control" id="textAreaExample" rows="1" cols="50"
-                                        placeholder="Add a reply..."></textarea>
+                                                    placeholder="Add a reply..."></textarea>
                                             </div>
                                         </div>
                                     </div>
