--- a/index.html
+++ b/index.html
@@ -201,9 +201,10 @@
                                     <label for="">Course Affiliation</label>
                                     <div class="input-group mb-3">
                                         <input type="text" class="form-control" placeholder="Select course affiliation"
-                                            aria-label="Recipient's username" aria-describedby="basic-addon2" >
+                                            aria-label="Recipient's username" aria-describedby="basic-addon2">
                                         <div class="input-group-append forms-btn">
-                                            <button class="btn btn-outline" type="button"><i class="fa-solid fa-plus"></i></button>
+                                            <button class="btn btn-outline" type="button"><i
+                                                    class="fa-solid fa-plus"></i></button>
                                         </div>
                                     </div>
                                 </div>
@@ -211,9 +212,10 @@
                                     <label for="">Documents Required <span style="color: red;">*</span></label>
                                     <div class="input-group mb-3">
                                         <input type="text" class="form-control" placeholder="Select documents"
-                                            aria-label="Recipient's username" aria-describedby="basic-addon2" >
+                                            aria-label="Recipient's username" aria-describedby="basic-addon2">
                                         <div class="input-group-append forms-btn">
-                                            <button class="btn btn-outline" type="button"><i class="fa-solid fa-plus"></i></button>
+                                            <button class="btn btn-outline" type="button"><i
+                                                    class="fa-solid fa-plus"></i></button>
                                         </div>
                                     </div>
                                 </div>
@@ -240,9 +242,10 @@
                                     <label for="">Entrance Required</label>
                                     <div class="input-group mb-3">
                                         <input type="text" class="form-control" placeholder="Select entrance"
-                                            aria-label="Recipient's username" aria-describedby="basic-addon2" >
+                                            aria-label="Recipient's username" aria-describedby="basic-addon2">
                                         <div class="input-group-append forms-btn">
-                                            <button class="btn btn-outline" type="button"><i class="fa-solid fa-plus"></i></button>
+                                            <button class="btn btn-outline" type="button"><i
+                                                    class="fa-solid fa-plus"></i></button>
                                         </div>
                                     </div>
                                 </div>
@@ -250,21 +253,139 @@
                                     <label for="">Specialization <span style="color: red;">*</span></label>
                                     <div class="input-group mb-3">
                                         <input type="text" class="form-control" placeholder="Select specialization"
-                                            aria-label="Recipient's username" aria-describedby="basic-addon2" >
+                                            aria-label="Recipient's username" aria-describedby="basic-addon2">
                                         <div class="input-group-append forms-btn">
-                                            <button class="btn btn-outline" type="button"><i class="fa-solid fa-plus"></i></button>
+                                            <button class="btn btn-outline" type="button"><i
+                                                    class="fa-solid fa-plus"></i></button>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <body>
-                        <hr class="dashed-line">     
-                    </body>
+
                     <div>
-                        
+                        <hr class="dashed-line">
                     </div>
+
+                    <div class="m-3 ">
+                        <h4 style="font-size: 16px;">Intakes</h4>
+                        <div class="row align-items-center  ">
+                            <div class="col-md-6">
+                                <div class="mb-3">
+                                    <label for="">Intake <span style="color: red;">*</span></label>
+
+                                    <div class="input-group mb-3 px-3 apply-bg">
+                                        <div class="input-group-append forms-btn">
+                                            <button class="btn btn-outline dlt mx-1" type="button"><i
+                                                    class="fa-solid fa-trash"></i></button>
+                                        </div>
+                                        <input type="text" class="form-control"
+                                            aria-label="Text input with segmented dropdown button"
+                                            placeholder="September">
+                                        <div class="input-group-append">
+                                            <button type="button"
+                                                class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split"
+                                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                            </button>
+                                            <div class="dropdown-menu">
+                                                <a class="dropdown-item" href="#">Action</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="mb-3">
+                                    <label for="">Duration <span style="color: red;">*</span></label>
+                                    <div class="apply-bg1">
+                                        <div class="input-group mb-3 px-3">
+                                            <input type="text" class="form-control" placeholder="1 Year"
+                                                aria-label="Recipient's username" aria-describedby="basic-addon2">
+                                            <div class="input-group-append forms-btn">
+                                                <button class="btn btn-outline mx-1" type="button"><i
+                                                        class="fa-solid fa-plus"></i></button>
+                                                <button class="btn btn-outline dlt" type="button"><i
+                                                        class="fa-solid fa-trash"></i></button>
+                                            </div>
+                                        </div>
+                                        <div class="input-group mb-3 px-3">
+                                            <input type="text" class="form-control" placeholder="2 Years"
+                                                aria-label="Recipient's username" aria-describedby="basic-addon2">
+                                            <div class="input-group-append forms-btn">
+                                                <button class="btn btn-outline mx-1" type="button"><i
+                                                        class="fa-solid fa-plus"></i></button>
+                                                <button class="btn btn-outline dlt" type="button"><i
+                                                        class="fa-solid fa-trash"></i></button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="add">
+                            <button><i class="fa-solid fa-plus"></i> Add Row</button>
+                        </div>
+                    </div>
+
+                    <div>
+                        <hr class="dashed-line">
+                    </div>
+
+                    <div class="mx-3 my-4">
+                        <div class="flex-row d-flex justify-content-between">
+                            <div>
+                                <h4 style="font-size: 16px;">Course Tag</h4>
+                            </div>
+                            <div class="add"><button><i class="fa-solid fa-plus"></i> New Course Tag</button></div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <div class="mb-3">
+                                    <label>Tag</label>
+                                    <div class="input-group">
+                                        <input type="text" class="form-control"
+                                            aria-label="Text input with segmented dropdown button"
+                                            placeholder="Select tag ">
+                                        <div class="input-group-append">
+                                            <button type="button"
+                                                class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split"
+                                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                            </button>
+                                            <div class="dropdown-menu">
+                                                <a class="dropdown-item" href="#">Action</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <div class="mb-3">
+                                    <label for="">Description</label>
+                                    <div class="input-group mb-3 ">
+                                        <input type="text" class="form-control" placeholder="Enter description"
+                                            aria-label="Recipient's username" aria-describedby="basic-addon2">
+                                        <div class="input-group-append forms-btn">
+                                            <button class="btn btn-outline dlt mx-1" type="button"><i
+                                                    class="fa-solid fa-trash"></i></button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="add">
+                            <button><i class="fa-solid fa-plus"></i> Add Row</button>
+                        </div>
+                    </div>
+
+                    <div>
+                        <hr>
+                    </div>
+                    <div class="d-flex flex-row-reverse align-items-center">
+                        <div class="p-2"><button class="bt-2">Next <i class="fa-solid fa-arrow-right"></i></button></div>
+                        <div class="p-2"><button class="bt-1"><i class="fa-solid fa-arrow-left"></i> Prev</button></div>
+                    </div>
+
                 </div>
             </div>
         </div>
